<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.yurifelix.appofbank.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_botoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_dados">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_conta"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:background="@color/colorBackgroundLayouts"
                android:clickable="false"
                android:elevation="2dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_saldoEmConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoSaldoEmConta"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_saldo"
                    app:layout_constraintStart_toStartOf="@+id/tv_saldo" />

                <TextView
                    android:id="@+id/tv_Reais_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reais_simbolo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_saldo"
                    app:layout_constraintEnd_toStartOf="@+id/tv_saldo"
                    app:layout_constraintTop_toTopOf="@+id/tv_saldo" />

                <TextView
                    android:id="@+id/tv_saldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_money" />

                <ProgressBar
                    android:id="@+id/progressConta"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_saques"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBackgroundLayouts"
                android:elevation="2dp"
                android:onClick="historicoSaques"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_conta">

                <TextView
                    android:id="@+id/tv_saques"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Historico de Saques"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_sacar" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_transferencias"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorBackgroundLayouts"
                android:clickable="true"
                android:elevation="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:onClick="historicoTransferencias"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_saques">

                <TextView
                    android:id="@+id/tv_Historico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/textoHistoricoTransferencias"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageTransferencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_transferencia" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_dados"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_agencia_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorBackgroundLayouts"
            app:layout_constraintBottom_toBottomOf="@+id/tv_agencia"
            app:layout_constraintStart_toEndOf="@+id/tv_agencia" />

        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBackgroundLayouts"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_conta_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorBackgroundLayouts"
            app:layout_constraintBottom_toBottomOf="@+id/tv_conta"
            app:layout_constraintStart_toEndOf="@+id/tv_conta" />

        <TextView
            android:id="@+id/tv_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="CONTA:"
            android:textColor="@color/colorBackgroundLayouts"
            app:layout_constraintStart_toStartOf="@+id/tv_usuario"
            app:layout_constraintTop_toBottomOf="@+id/tv_usuario" />

        <TextView
            android:id="@+id/tv_agencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="AGÊNCIA:"
            android:textColor="@color/colorBackgroundLayouts"
            app:layout_constraintStart_toStartOf="@+id/tv_usuario"
            app:layout_constraintTop_toBottomOf="@+id/tv_conta_num" />

        <ProgressBar
            android:id="@+id/progressDados"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorBackgroundLayoutsClick"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_botoes"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/bt_transferencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:onClick="realizarTransferencia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_saque"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_transferencia" />

        <ImageButton
            android:id="@+id/bt_saque"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="realizarSaque"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_conta"
            app:layout_constraintStart_toEndOf="@+id/bt_transferencia"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_sacar" />

        <ImageButton
            android:id="@+id/bt_conta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="dadosConta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_saque"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_conta" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
